fixes issue with clipped video player

--- a/app/assets/stylesheets/partials/media-player.scss
+++ b/app/assets/stylesheets/partials/media-player.scss
@@ -1,4 +1,8 @@
 .media-player-container {
-  border: 10px solid white;
   overflow: hidden;
+  padding: 10px;
+}
+
+.mejs__container {
+  max-width: 100%;
 }
